# prismcurl

./: .gitmodules  CMakeLists.txt  README.md  libcurlprism.mri
install/isd/lib/: libcurl.la
install/isd/lib/pkgconfig/: libcurl.pc
install/isd/share/man/man3/: libcurl-symbols.3
install/linux/lib/: libcurl.la
install/linux/lib/pkgconfig/: libcurl.pc
install/linux64/lib/: Makefile  cmake_install.cmake  curl_config.h
install/linux64/lib/pkgconfig/: libcurl.pc
install/win32/include/curl/: curlver.h
install/win32/lib/: libcurl.lib
